<resources>
    <string name="key_map">AIzaSyC1sswvFkexF72r2-UWCwPM1vPmW_QHo84</string>
    <string name="app_name">WashNow</string>
    <string name="WashNow">WashNow</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="do_not_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up_account">Đăng ký tài khoản</string>
    <string name="not_image">not image</string>
    <string name="your_phone_number">Số điện thoại của bạn</string>
    <string name="rules1">Tôi đồng ý với</string>
    <string name="rules2">Điều khoản &amp; điều kiện.</string>
    <string name="I_am_a_shop"> Tôi là cửa tiệm.</string>
    <string name="next">Tiếp tục</string>
    <string name="sign_up">Đăng ký</string>
    <string name="register_as_a_store.">Đăng ký vai trò là cửa tiệm.</string>
    <string name="verification">Xác minh</string>
    <string name="remaining">Còn lại:</string>
    <string name="send_to">Gửi lại</string>
    <string name="title_otp">Kiểm tra mã OTP</string>
    <string name="content_otp">Chúng tôi đã gửi mã  tới số điện thoại của bạn</string>
    <string name="current_possition">Vị trí hiện tại </string>
    <string name="or">Hoặc</string>
    <string name="pick_possition_in_map">Chọn trên bản đồ</string>
    <string name="your_fullname">Nhập tên của bạn</string>
    <string name="your_store">Nhập tên cửa tiệm</string>
    <string name="avata_store">Ảnh đại diện cửa tiệm</string>
    <string name="chosse_image">Chọn ảnh để tải lên</string>
    <string name="settting_possition_store">Cài đặt vị trí cửa tiệm</string>
    <string name="pick_image">Chọn ảnh</string>
    <string name="chosse_possition">Chọn vị trí</string>
    <string name="content_dialog_disconnect_internet">Không có Internet. Vui lòng thử lại.!</string>
    <string name="content_dialog_gps">Bạn chưa bật dịch vụ vị trí. Vui lòng bật dịch vụ vị trí trước khi sử dụng tính năng</string>
    <string name="try_again">Thử lại</string>
    <string name="turn_on_location_service">Bật dịch vụ vị trí</string>
    <string name="cancel">Hủy</string>
    <string name="no">Không</string>
    <string name="list_service">Danh Sách dịch vụ</string>
    <string name="service_name">Tên dịch vụ:</string>
    <string name="service_type">Loại dịch vụ</string>
    <string name="service_extra">Dịch vụ thêm :</string>
    <string name="price">Giá Tiền :</string>
    <string name="add">Thêm</string>
    <string name="price_vnd">Giá (VNĐ):</string>
    <string name="sale">Sale:</string>
    <string name="service_add">Thêm Dịch Vụ</string>
    <string name="service_type_add">Thêm Loại Dịch Vụ</string>
    <string name="status">Status:</string>
    <string name="activity">Hoạt Động</string>
    <string name="no_activity">Không Hoạt Động</string>
    <string name="sevice_type_name">Tên Loại Dịch Vụ:</string>
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="order">Đơn hàng</string>
    <string name="post">Bài đăng</string>
    <string name="profile">Cá nhân</string>
    <string name="servies">Dịch vụ</string>
    <string name="list_service_type">Danh Sách Loại Dịch Vụ</string>
    <string name="name_laundry_demo">Tiệm giặt Ánh Sao Xanh</string>
    <string name="status2">Trạng thái:</string>
    <string name="open_door">Mở cửa</string>
    <string name="today">Hôm nay</string>
    <string name="money_example">900.000 đ</string>
    <string name="this_week">Tuần này</string>
    <string name="this_month">Tháng này</string>
    <string name="statistics_detail">Thống kê chi tiết</string>
    <string name="status_name_order_example">Chờ nhận đồ(10)</string>
    <string name="datetime_example">11:00 11/07/2023</string>
    <string name="order_id_example">#ahfdlfl0132355465</string>
    <string name="order_id_example2">ahfdlfl0132355465</string>
    <string name="full_name_example">Nguyễn Văn Trường</string>
    <string name="phone_number_example">0987654321</string>
    <string name="phone_number_example2">0987654321</string>
    <string name="waiting_confirm">Chờ xác nhận</string>
    <string name="received">Nhận đồ</string>
    <string name="title_permission">Xin quyền try cập vị trị</string>
    <string name="content_permission">Vui lòng cấp “Quyền vị trí” để cho phép xác định và vị trí của bạn</string>
    <string name="go_to_setting">Đi đến cài đặt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">Nội dung:</string>
    <string name="addpost">Đăng</string>
    <string name="category">Danh Mục</string>
    <string name="see_more">Xem tất cả</string>
    <string name="near_store">Cửa Hàng Gần đây</string>
    <string name="title">Tiêu đề</string>
    <string name="order_code">Mã đơn hàng:</string>
    <string name="time_order">Thời gian đặt hàng:</string>
    <string name="address_detail">Địa chỉ chi tiết:</string>
    <string name="address_example">123 Trịnh Văn Bô, Hà Nội</string>
    <string name="status_pair_example">Chưa thanh toán</string>
    <string name="laundry_example">Tiệm giặt Ánh Sao Xanh</string>
    <string name="note">Ghi chú</string>
    <string name="note_content_example">Mình chỉ ở nhà vào buổi tối. Bạn vui lòng gọi điện cho mình trước khi giao hàng</string>
    <string name="order_detail">Đơn hàng chi tiết</string>
    <string name="back">Back</string>
    <string name="notification">Notification</string>
    <string name="detail_order">Chi tiết đơn hàng</string>
    <string name="service_number_example">2 Dịch vụ</string>
    <string name="method_payment">Phương thức thanh toán</string>
    <string name="cash_on_delivery">Thanh toán tiền mặt</string>
    <string name="note_total_example">Lưu ý: Tổng tiền được tính khi bạn nhập cân nặng đồ giặt</string>
    <string name="total">TỔNG TIỀN:</string>
    <string name="total_price_example">1.153.000 đ</string>
    <string name="receipt_clothing">Nhận đồ giặt</string>
    <string name="price_d_kg_example">5.000 đ/kg</string>
    <string name="pick_image_when_weight_clothing">Chụp ảnh khi cân dồ giặt:</string>
    <string name="price_example">100.000 đ</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="shop_name">Tên của hàng</string>
    <string name="phone">Số điện thoại</string>
    <string name="adress">Địa chỉ</string>
    <string name="rate">Đánh giá</string>
    <string name="update">Cập nhật</string>
    <string name="receive">Nhận đồ</string>
    <string name="washed">Giặt xong</string>
    <string name="delivery">Giao đồ - Hoàn thành</string>
</resources>