<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/title"
            style="@style/font_18_primary_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_detail"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:src="@drawable/ic_notification"
            android:contentDescription="@string/notification"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</com.google.android.material.appbar.MaterialToolbar>