<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ic_order"
            android:layout_width="76dp"
            android:layout_height="60dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_order_home_laundry"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_id"
            style="@style/font_14_dask_blue_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/order_id_example"
            app:layout_constraintLeft_toRightOf="@id/ic_order"
            app:layout_constraintRight_toLeftOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            style="@style/font_14_gray_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/datetime_example"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_full_name"
            style="@style/font_14_black_medium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawablePadding="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/full_name_example"
            app:layout_constraintBottom_toTopOf="@+id/tv_phone_number"
            app:layout_constraintLeft_toRightOf="@id/ic_order"
            app:layout_constraintRight_toLeftOf="@id/tv_status_name"
            app:layout_constraintTop_toBottomOf="@id/tv_order_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone_number"
            style="@style/font_14_primary_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="6dp"
            android:text="@string/phone_number_example"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ic_order"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_status_name"
            style="@style/font_12_black_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_circle"
            android:drawablePadding="4dp"
            android:drawableTint="@color/orange"
            android:paddingVertical="6dp"
            android:text="@string/waiting_confirm"
            android:textColor="@color/orange"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_action"
            style="@style/font_12_white_medium"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            android:text="@string/received"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>