<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_custom"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_order_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"

                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_18_black_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/order_code"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_store"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/font_18_black_medium"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="6dp"
                    app:layout_constraintLeft_toRightOf="@id/label_store"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/order_id_example2"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_time_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_14_black_regular"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/name_store"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/time_order"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/create_at"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/font_14_black_medium"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toRightOf="@id/label_time_order"
                    app:layout_constraintTop_toBottomOf="@id/name_store"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/datetime_example"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_store_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    style="@style/font_14_black_regular"
                    app:layout_constraintTop_toBottomOf="@id/create_at"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/address_detail"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fee_delivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/font_14_black_medium"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toRightOf="@id/label_store_address"
                    app:layout_constraintTop_toBottomOf="@id/create_at"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/address_example"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    style="@style/font_14_black_regular"
                    app:layout_constraintTop_toBottomOf="@id/fee_delivery"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/status2"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/font_14_black_medium"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toRightOf="@id/label_phone"
                    app:layout_constraintTop_toBottomOf="@id/fee_delivery"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/status_pair_example"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/gray_6"
                app:layout_constraintTop_toBottomOf="@id/layout_order_info"/>
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_store_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/divider1">
                
                <androidx.cardview.widget.CardView
                    android:id="@+id/layout_avatar_store"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:cardCornerRadius="35dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginVertical="6dp">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_avatar_store"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/avatar_profile"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/store_name"
                    style="@style/font_16_black_medium"
                    android:text="@string/laundry_example"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/store_phone"
                    app:layout_constraintLeft_toRightOf="@id/layout_avatar_store"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/store_phone"
                    android:text="@string/phone_number_example2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/font_14_black_regular"
                    app:layout_constraintTop_toBottomOf="@id/store_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/store_address"
                    app:layout_constraintLeft_toLeftOf="@id/store_name"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/store_address"
                    android:text="@string/address_example"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/font_14_black_regular"
                    app:layout_constraintTop_toBottomOf="@id/store_phone"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/store_name"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/gray_6"
                app:layout_constraintTop_toBottomOf="@id/layout_store_info"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/note"
                style="@style/font_16_black_regular"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="20dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/note"
                style="@style/font_12_gray_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/note_content_example"
                app:layout_constraintTop_toBottomOf="@id/label_note"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/gray_6"
                android:layout_marginVertical="14dp"
                app:layout_constraintTop_toBottomOf="@id/note"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_detail_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/detail_order"
                style="@style/font_16_black_regular"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider3"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_service_number"
                style="@style/font_16_primary_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/service_number_example"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/label_detail_order"
                app:layout_constraintTop_toTopOf="@id/label_detail_order" />

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_cart_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/label_detail_order">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_cart_item"
                    tools:itemCount="2"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/gray_6"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/layout_cart_item"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_method_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/method_payment"
                style="@style/font_16_black_regular"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider4"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_method_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/cash_on_delivery"
                style="@style/font_16_gray_regular"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintStart_toEndOf="@id/label_method_payment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider4"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="@color/gray_6"
                app:layout_constraintTop_toBottomOf="@id/tv_method_payment"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_note_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"
                android:textAlignment="center"
                android:text="@string/note_total_example"
                style="@style/font_14_red_regular"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/divider5"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_18_primary_medium"
                android:layout_margin="24dp"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_note_total"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_18_primary_medium"
                android:layout_margin="24dp"
                android:text="@string/total_price_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_note_total"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/receipt_clothing"
                android:textAllCaps="true"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintWidth_default="percent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>