<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8F8"
    android:padding="14dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_service" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_14_black_regular"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/layout_image"
        app:layout_constraintStart_toEndOf="@id/layout_image"
        android:text="@string/service_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_14_black_bold"
        app:layout_constraintTop_toBottomOf="@id/service_name"
        app:layout_constraintStart_toStartOf="@id/service_name"
        android:text="@string/price_d_kg_example" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_pick_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_14_black_regular"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/layout_image"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pick_image_when_weight_clothing" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/label_pick_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/img_pick_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>